objects/Credit_Rating_Product_Junction__c.object
<CustomObject>
    <fields>
        <fullName>CLProductId__c</fullName>
        <formula>CASESAFEID(CL_Product__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLProductId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CL_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Product</label>
        <referenceTo>clcommon__CL_Product__c</referenceTo>
        <relationshipLabel>Credit Rating Product Junction</relationshipLabel>
        <relationshipName>Credit_Rating_Product_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Rating_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Rating Matrix</label>
        <referenceTo>genesis__Credit_Rating_Matrix__c</referenceTo>
        <relationshipLabel>Credit Rating Product Junction</relationshipLabel>
        <relationshipName>Credit_Rating_Product_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>CL_Product__r.loan__Lending_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditRatingId__c</fullName>
        <formula>CASESAFEID(Credit_Rating_Matrix__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>creditRatingId</label>
        <type>Text</type>
    </fields>
    <label>Credit Rating Product Junction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CL_Product__c</columns>
        <columns>Credit_Rating_Matrix__c</columns>
        <columns>Interest_Rate__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllSecured</fullName>
        <columns>CL_Product__c</columns>
        <columns>Credit_Rating_Matrix__c</columns>
        <columns>Interest_Rate__c</columns>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CL_Product__c</field>
            <operation>equals</operation>
            <value>PRO-00000002</value>
        </filters>
        <label>AllSecured</label>
    </listViews>
    <nameField>
        <displayFormat>CRP-{0000000000}</displayFormat>
        <label>Credit Rating Product Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Rating Product Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>